--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -44,7 +44,7 @@
             <!-- <li><a [routerLink]="['/becomeSeller']" class=""><i class="icon-material-outline-local-atm
             "></i> Become a Seller</a></li> -->
 
-            <li><a [routerLink]="['/contact']" class=""><i class="icon-material-outline-help-outline"></i>
+            <li><a [routerLink]="['/help']" class=""><i class="icon-material-outline-help-outline"></i>
                 Help & Support</a></li>
 
             <li *ngIf="!userIsAuthenticated"><a [routerLink]="['/login']" class=""><i class="icon-feather-upload-cloud
