--- a/src/app/shared/blank/blank.component.html
+++ b/src/app/shared/blank/blank.component.html
@@ -1,3 +1,3 @@
 <div style="height: 50vh; display: flex; justify-content: center; align-items: center;">
-  <h2>Comming Soon</h2>
+  <h2>Coming Soon</h2>
 </div>
