--- a/src/app/home/signup/signup.page.html
+++ b/src/app/home/signup/signup.page.html
@@ -70,8 +70,7 @@
               <input type="password" class="input-text with-border" placeholder="Confirm Password" formControlName="confirm" />
             </div>
   
-            <app-recaptcha *ngIf="form.valid"
-            (handleToggle)="handleRecaptcha($event)"></app-recaptcha>
+            <app-recaptcha (handleToggle)="handleRecaptcha($event)"></app-recaptcha>
    
             <div *ngIf="form.touched && form.invalid" style="text-align:center; color: red;">Please fill with valid form data.
             </div>
