--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-content>
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <app-header></app-header>
+      <router-outlet></router-outlet>    
+    </div>
+  </ion-content>
 </ion-app>
