--- a/src/app/shared/blank/blank.component.scss
+++ b/src/app/shared/blank/blank.component.scss
@@ -3,5 +3,5 @@
   display: flex; 
   justify-content: center; 
   align-items: center; 
-  border: 3px solid blueviolet;
+  border: 3px solid orange;
 }
