--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 
-input.ng-invalid.ng-touched {
+input.ng-invalid.ng-touched, ion-textarea.ng-invalid.ng-touched {
   border: 1px solid red;
   background-color: lightpink;
 }
