--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -47,7 +47,12 @@
 
           <div class="input-with-icon-left">
             <i class="icon-line-awesome-map-marker"></i>
-            <input type="text" class="input-text with-border" placeholder="Location" formControlName="country" />
+            <div style="margin-left: 48px;">
+              <select class="with-border" style="padding: 0 10px;" placeholder="Country" formControlName="country">
+                <option *ngFor="let country of arrCountry; let i=index;" [value]="country.code">{{country.name}}
+                </option>
+              </select>
+            </div>
           </div>
 
           <div class="input-with-icon-left" title="Should be at least 8 characters long" data-tippy-placement="bottom">
