--- a/src/app/me/settings/account/account.component.html
+++ b/src/app/me/settings/account/account.component.html
@@ -1,21 +1,16 @@
-<form class="dashboard-box margin-top-0" [formGroup]="userForm" (ngSubmit)="onSubmitUserForm()">
+<form class="dashboard-box" [formGroup]="userForm" (ngSubmit)="onSubmitUserForm()">
 
   <!-- Headline -->
   <div class="headline">
     <ion-toolbar>
       <h3><i class="icon-material-outline-account-circle"></i> My Account</h3>
-
-      <ion-button slot="end" type="submit">
-        <ion-icon name="save-outline" slot="start"></ion-icon>Save Changes
-      </ion-button>
-
+      <button class="button" slot="end" type="submit">Save Changes</button>
+    
     </ion-toolbar>
   </div>
 
   <div class="content with-padding padding-bottom-0">
-
     <div class="row">
-
       <div class="col-auto">
         <div class="avatar-wrapper" data-tippy-placement="bottom" title="Change Avatar">
           <img class="profile-pic" [src]="imagePreview || 'assets/images/user-avatar-placeholder.png'" alt="" />
@@ -26,13 +21,13 @@
 
       <div class="col">
         <div class="row">
-          <div class="col-xl-6">
+          <div class="col-xl-12 col-md-6">
             <div class="submit-field">
               <h5>Email</h5>
               <input type="text" class="with-border" formControlName="email">
             </div>
           </div>
-          <div class="col-xl-6">
+          <div class="col-xl-12 col-md-6">
             <div class="submit-field">
               <h5>Nationality</h5>
               <select formControlName="country">
@@ -43,14 +38,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-6">
+          <div class="col-xl-12 col-md-6">
             <div class="submit-field">
               <h5>First Name</h5>
               <input type="text" class="with-border" formControlName="firstName">
             </div>
           </div>
 
-          <div class="col-xl-6">
+          <div class="col-xl-12 col-md-6">
             <div class="submit-field">
               <h5>Last Name</h5>
               <input type="text" class="with-border" formControlName="lastName">
