--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,7 +26,7 @@
             </li>
 
             <li *ngIf="userIsAuthenticated">
-              <a [routerLink]="['/browse-tasks']" routerLinkActive="router-link-active">
+              <a [routerLink]="['/tasks/browse']" routerLinkActive="router-link-active">
                 <i class="icon-material-outline-assignment"></i>Browse Tasks
               </a>
             </li>
