--- a/src/app/tasks/single-task/single-task.page.html
+++ b/src/app/tasks/single-task/single-task.page.html
@@ -78,7 +78,7 @@
         </div>
         <ul class="boxed-list-ul">
           <li *ngFor="let bid of bids; let i=index;">
-            <app-bid-preview [bid]="bid" (handlerDelete)="handlerDelete(bid)"></app-bid-preview>
+            <!-- <app-bid-preview [bid]="bid" (handlerDelete)="handlerDelete(bid)"></app-bid-preview> -->
 
           </li>
 
