--- a/src/app/me/post-task/post-task.page.html
+++ b/src/app/me/post-task/post-task.page.html
@@ -1,9 +1,113 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>post-task</ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- Dashboard Headline -->
+<div class="dashboard-headline">
+  <h3>Post a Task</h3>
 
-<ion-content>
+</div>
 
-</ion-content>
+<!-- Row -->
+<form class="row" [formGroup]="form" (submit)="onSubmit()">
+
+  <!-- Dashboard Box -->
+  <div class="col-xl-12">
+    <div class="dashboard-box margin-top-0">
+
+      <!-- Headline -->
+      <div class="headline">
+        <ion-toolbar>
+          <h3>
+            <i class="icon-feather-folder-plus"></i> Task Submission Form
+            <a mat-button color="primary" [routerLink]="['/edit-task', '5f5cee2b617f5903c027ab61']">EDIT</a>
+          </h3>
+          
+          <button class="button button-sliding-icon ripple-effect" type="submit" slot="end">
+            Post Task <i class="icon-feather-plus"></i>
+          </button>
+        </ion-toolbar>
+      </div>
+
+      <div class="content with-padding padding-bottom-10">
+        <!-- Form -->
+        <div>
+          <div class="row">
+            <div class="col-xl-4">
+              <div class="submit-field">
+                <h5>Project Name</h5>
+                <input type="text" class="with-border" placeholder="e.g. build me a website"
+                  [formControlName]="'title'">
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="submit-field">
+                <h5>Category</h5>
+                <app-category-picker formControlName="refCategory"></app-category-picker>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="submit-field">
+                <h5>Country <i class="help-icon" data-tippy-placement="right"
+                    title="Leave blank if it's an online job"></i></h5>
+                <app-country-picker formControlName="country"></app-country-picker>
+              </div>
+            </div>
+
+            <div class="col-xl-6">
+              <div class="submit-field">
+                <h5>What is your estimated budget?</h5>
+                <div class="row">
+                  <div class="col-xl-6">
+                    <div class="input-with-icon">
+                      <input class="with-border" type="text" placeholder="Minimum" formControlName="minBudget">
+                      <i class="currency">USD</i>
+                    </div>
+                  </div>
+                  <div class="col-xl-6">
+                    <div class="input-with-icon">
+                      <input class="with-border" type="text" placeholder="Maximum" formControlName="maxBudget">
+                      <i class="currency">USD</i>
+                    </div>
+                  </div>
+                </div>
+                <app-yes-no formControlName="isHourly" strNo="Fixed Price Project" strYes="Hourly Project"></app-yes-no>
+              </div>
+            </div>
+
+            <div class="col-xl-6">
+              <app-skills-picker formControlName="refSkills" #fff></app-skills-picker>
+            </div>
+
+            <div class="col-xl-12">
+              <div class="submit-field">
+                <h5>Describe Your Project</h5>
+                <ion-textarea cols="30" rows="8" formControlName="description"></ion-textarea>               
+              </div>
+
+              <div class="submit-field">
+                <div class="uploadButton margin-top-30">
+                  <input class="uploadButton-input" type="file" accept="image/*, application/pdf" id="upload" #filePicker
+                    (change)="onImagePicked($event)" />
+                  <label class="uploadButton-button ripple-effect" for="upload">Upload Files</label>
+                  <span class="uploadButton-file-name">Images or PDF files that might be helpful in describing
+                    your project</span>
+                </div>
+                <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('myfile').valid">
+                  <img [src]="imagePreview" [alt]="form.value.title">
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- <div *ngIf="!f.valid && f.touched" style="text-align:center; color: red;">Please fill with valid form data.</div> -->
+          <!-- Button -->
+
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+</form>
+<!-- Row / End -->
