--- a/src/app/tasks/browse/list/list.component.html
+++ b/src/app/tasks/browse/list/list.component.html
@@ -1,4 +1,4 @@
-<h3 class="page-title">Search Results</h3>
+<h3 class="page-title">Search Results<ion-spinner *ngIf="isLoading"></ion-spinner></h3>
 
 <div class="notify-box margin-top-15">
   <div class="switch-container">
