--- a/src/app/tasks/browse/list/list.component.html
+++ b/src/app/tasks/browse/list/list.component.html
@@ -20,8 +20,9 @@
 <!-- Tasks Container -->
 <div class="tasks-list-container compact-list margin-top-35">
   <!-- Task -->
-  <a *ngFor="let task of tasks; let i=index;" [routerLink]="'/tasks/single-task/'+task._id" href="#"
-    class="task-listing">
+  <a *ngFor="let task of tasks; let i=index;"
+  [routerLink] = "'/tasks/single-task/'+task._id"
+  class="task-listing">
 
     <!-- Job Listing Details -->
     <div class="task-listing-details">
@@ -35,10 +36,7 @@
         </ul>
         <p class="task-listing-text">{{task.description.split(".")[0]}}</p>
         <div class="task-tags">
-          <span *ngFor="let skillId of task.refSkills">{{skillId}}</span>
-          <span>PHP</span>
-          <span>MySQL Administration</span>
-          <span>API Development</span>
+          <span *ngFor="let skill of task.refSkills">{{skill.title}}</span>
         </div>
       </div>
 
@@ -55,8 +53,24 @@
           <span>Hourly Rate</span>
         </div>
 
-        <span class="button button-sliding-icon ripple-effect">Bid Now <i
-            class="icon-material-outline-arrow-right-alt"></i></span>
+        <span *ngIf="!userService.me" class="button button-sliding-icon ripple-effect"
+          (click)="onClickLoginToBid($event, task)">
+          Login to Bid
+          <i class="icon-material-outline-arrow-right-alt"></i>
+        </span>
+
+        <span *ngIf="userService.me && task.refCreator==userService.me._id" class="button button-sliding-icon ripple-effect"
+        (click)="onClickEdit($event, task)">
+          Edit
+          <i class="icon-material-outline-arrow-right-alt"></i>
+        </span>
+
+        <span *ngIf="userService.me && task.refCreator!=userService.me._id"
+        class="button button-sliding-icon ripple-effect"
+        (click)="onClickBid($event, task)">
+          Bid Now 
+          <i class="icon-material-outline-arrow-right-alt"></i>
+        </span>
       </div>
     </div>
   </a>
@@ -75,8 +89,8 @@
         <ul>
           <li class="pagination-arrow"><a href="#" class="ripple-effect"><i
                 class="icon-material-outline-keyboard-arrow-left"></i></a></li>
-          <li><a href="#" class="ripple-effect">1</a></li>
-          <li><a href="#" class="current-page ripple-effect">2</a></li>
+          <li><a href="#" class="current-page ripple-effect">1</a></li>
+          <li><a href="#" class="ripple-effect">2</a></li>
           <li><a href="#" class="ripple-effect">3</a></li>
           <li><a href="#" class="ripple-effect">4</a></li>
           <li class="pagination-arrow"><a href="#" class="ripple-effect"><i
