--- a/src/app/me/post-task/post-task.page.html
+++ b/src/app/me/post-task/post-task.page.html
@@ -16,7 +16,6 @@
         <ion-toolbar>
           <h3>
             <i class="icon-feather-folder-plus"></i> Task Submission Form
-            <a mat-button color="primary" [routerLink]="['/edit-task', '5f5cee2b617f5903c027ab61']">EDIT</a>
           </h3>
           
           <button class="button button-sliding-icon ripple-effect" type="submit" slot="end">
@@ -31,30 +30,39 @@
           <div class="row">
             <div class="col-xl-4">
               <div class="submit-field">
-                <h5>Project Name</h5>
-                <input type="text" class="with-border" placeholder="e.g. build me a website"
-                  [formControlName]="'title'">
+                <h5><app-valid-marker [x]="form.get('title')"></app-valid-marker>
+                  Project Name
+                </h5>
+                <input type="text" class="with-border" placeholder="e.g. build me a website" [formControlName]="'title'">                
               </div>
             </div>
 
             <div class="col-xl-4">
               <div class="submit-field">
-                <h5>Category</h5>
+                <h5>
+                  <app-valid-marker [x]="form.get('refCategory')"></app-valid-marker>
+                  Category
+                </h5>
                 <app-category-picker formControlName="refCategory"></app-category-picker>
               </div>
             </div>
 
             <div class="col-xl-4">
               <div class="submit-field">
-                <h5>Country <i class="help-icon" data-tippy-placement="right"
-                    title="Leave blank if it's an online job"></i></h5>
+                <h5>
+                  <app-valid-marker [x]="form.get('country')"></app-valid-marker>
+                  Country
+                </h5>
                 <app-country-picker formControlName="country"></app-country-picker>
               </div>
             </div>
 
             <div class="col-xl-6">
               <div class="submit-field">
-                <h5>What is your estimated budget?</h5>
+                <h5>
+                  <app-valid-marker [x]="form.get('minBudget')"></app-valid-marker>
+                  What is your estimated budget?
+                </h5>
                 <div class="row">
                   <div class="col-xl-6">
                     <div class="input-with-icon">
@@ -74,27 +82,25 @@
             </div>
 
             <div class="col-xl-6">
-              <app-skills-picker formControlName="refSkills" #fff></app-skills-picker>
+              <div class="submit-field">
+                <h5>
+                  <app-valid-marker [x]="form.get('refSkills')"></app-valid-marker>
+                  What skills are required?
+                </h5>
+                <app-skills-picker formControlName="refSkills" #fff></app-skills-picker>            
+              </div>
             </div>
 
             <div class="col-xl-12">
               <div class="submit-field">
-                <h5>Describe Your Project</h5>
+                <h5>
+                  <app-valid-marker [x]="form.get('description')"></app-valid-marker>
+                  Describe Your Project
+                </h5>
                 <ion-textarea cols="30" rows="8" formControlName="description"></ion-textarea>               
               </div>
 
-              <div class="submit-field">
-                <div class="uploadButton margin-top-30">
-                  <input class="uploadButton-input" type="file" accept="image/*, application/pdf" id="upload" #filePicker
-                    (change)="onImagePicked($event)" />
-                  <label class="uploadButton-button ripple-effect" for="upload">Upload Files</label>
-                  <span class="uploadButton-file-name">Images or PDF files that might be helpful in describing
-                    your project</span>
-                </div>
-                <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('myfile').valid">
-                  <img [src]="imagePreview" [alt]="form.value.title">
-                </div>
-              </div>
+              <!-- <app-gcs-uploader formControlName="filePath"></app-gcs-uploader> -->
             </div>
 
           </div>
