--- a/src/app/shared/category-picker/category-picker.component.html
+++ b/src/app/shared/category-picker/category-picker.component.html
@@ -1,4 +1,6 @@
-<select class="with-border" style="padding: 0 10px;" placeholder="Select a Category" (change)="handleSelect($event)">
+<select class="with-border" style="padding: 0 10px;" placeholder="Select a Category" 
+  [(ngModel)]="value"
+  (change)="handleSelect($event)">
   <option *ngFor="let category of categories; let i=index;" [value]="category._id">{{category.title}}
   </option>
 </select>
