--- a/src/app/shared/country-picker/country-picker.component.html
+++ b/src/app/shared/country-picker/country-picker.component.html
@@ -1,4 +1,4 @@
-<select class="with-border" style="padding: 0 10px;" placeholder="Country" (change)="handleSelect($event)">
+<select class="with-border" style="padding: 0 10px;" placeholder="Country" (change)="handleSelect($event)" [(ngModel)]="value">
   <option *ngFor="let country of countries; let i=index;" [value]="country.code">{{country.name}}
   </option>
 </select>
