single task page

--- a/src/app/me/post-task/post-task.page.html
+++ b/src/app/me/post-task/post-task.page.html
@@ -66,13 +66,13 @@
                 <div class="row">
                   <div class="col-xl-6">
                     <div class="input-with-icon">
-                      <input class="with-border" type="text" placeholder="Minimum" formControlName="minBudget">
+                      <input class="with-border" type="number" placeholder="Minimum" formControlName="minBudget">
                       <i class="currency">USD</i>
                     </div>
                   </div>
                   <div class="col-xl-6">
                     <div class="input-with-icon">
-                      <input class="with-border" type="text" placeholder="Maximum" formControlName="maxBudget">
+                      <input class="with-border" type="number" placeholder="Maximum" formControlName="maxBudget">
                       <i class="currency">USD</i>
                     </div>
                   </div>
