--- a/src/app/tasks/single-task/single-task.page.html
+++ b/src/app/tasks/single-task/single-task.page.html
@@ -7,21 +7,9 @@
       <div class="col-md-12">
         <div class="single-page-header-inner">
           <div class="left-side">
-            <div class="header-image"><a href="single-company-profile.html"><img
-                  src="assets/images/browse-companies-02.png" alt=""></a></div>
             <div class="header-details">
               <h3>{{task.title}}</h3>
-              <h5>About the Employer</h5>
-              <ul>
-                <li><a href="single-company-profile.html"><i class="icon-material-outline-business"></i> Acue</a></li>
-                <li>
-                  <div class="star-rating" data-rating="5.0"></div>
-                </li>
-                <li><img class="flag" src="assets/images/flags/de.svg" alt=""> Germany</li>
-                <li>
-                  <div class="verified-badge-with-title">Verified</div>
-                </li>
-              </ul>
+
             </div>
           </div>
           <div class="right-side">
@@ -52,66 +40,24 @@
       </div>
 
       <!-- Atachments -->
-      <div class="single-page-section">
+      <!-- <div class="single-page-section">
         <h3>Attachments</h3>
         <div class="attachments-container">
           <a href="#" class="attachment-box ripple-effect"><span>Project Brief</span><i>PDF</i></a>
         </div>
-      </div>
+      </div> -->
 
       <!-- Skills -->
       <div class="single-page-section">
         <h3>Skills Required</h3>
         <div class="task-tags">
-          <span>iOS</span>
-          <span>Android</span>
-          <span>mobile apps</span>
-          <span>design</span>
+          <span *ngFor="let skill of task?.refSkills">{{skill?.title}}</span>
         </div>
       </div>
       <div class="clearfix"></div>
 
-      <!-- Freelancers Bidding -->
-      <div class="boxed-list margin-bottom-60">
-        <div class="boxed-list-headline">
-          <h3><i class="icon-material-outline-group"></i> Freelancers Bidding</h3>
-        </div>
-        <ul class="boxed-list-ul">
-          <li *ngFor="let bid of bids; let i=index;">
-            <!-- <app-bid-preview [bid]="bid" (handlerDelete)="handlerDelete(bid)"></app-bid-preview> -->
-
-          </li>
-
-          <li>
-            <div class="bid">
-              <!-- Avatar -->
-              <div class="bids-avatar">
-                <div class="freelancer-avatar">
-                  <a href="single-freelancer-profile.html"><img src="assets/images/user-avatar-placeholder.png"
-                      alt=""></a>
-                </div>
-              </div>
-
-              <!-- Content -->
-              <div class="bids-content">
-                <!-- Name -->
-                <div class="freelancer-name">
-                  <h4><a href="single-freelancer-profile.html">Sebastiano Piccio <img class="flag"
-                        src="assets/images/flags/it.svg" alt="" title="Italy" data-tippy-placement="top"></a></h4>
-                  <div class="star-rating" data-rating="4.5"></div>
-                </div>
-              </div>
-
-              <!-- Bid -->
-              <div class="bids-bid">
-                <div class="bid-rate">
-                  <div class="rate">$3,400</div>
-                  <span>In 10 days</span>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ul>
+      <div>
+        <app-place-bid></app-place-bid>
       </div>
 
     </div>
@@ -121,52 +67,24 @@
     <div class="col-xl-4 col-lg-4">
       <div class="sidebar-container">
 
-        <div class="countdown green margin-bottom-35">6 days, 23 hours left</div>
-
+        <!-- Sidebar Widget -->
         <div class="sidebar-widget">
-          <div class="bidding-widget">
-            <div class="bidding-headline">
-              <h3>Bid on this job!</h3>
-            </div>
-            <div class="bidding-inner">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>About the Employer</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <app-about-employer [employer]="task.refCreator"></app-about-employer>
+            </ion-card-content>
+          </ion-card>
+        </div>
 
-              <!-- Headline -->
-              <span class="bidding-detail">Set your <strong>minimal rate</strong></span>
-
-              <!-- Price Slider -->
-              <div class="bidding-value">$<span id="biddingVal"></span></div>
-              <input class="bidding-slider" type="text" value="" data-slider-handle="custom" data-slider-currency="$"
-                data-slider-min="2500" data-slider-max="4500" data-slider-value="auto" data-slider-step="50"
-                data-slider-tooltip="hide" />
-
-              <!-- Headline -->
-              <span class="bidding-detail margin-top-30">Set your <strong>delivery time</strong></span>
-
-              <!-- Fields -->
-              <div class="bidding-fields">
-                <div class="bidding-field">
-                  <!-- Quantity Buttons -->
-                  <div class="qtyButtons">
-                    <div class="qtyDec"></div>
-                    <input type="text" name="qtyInput" value="1">
-                    <div class="qtyInc"></div>
-                  </div>
-                </div>
-                <div class="bidding-field">
-                  <select class="selectpicker default">
-                    <option selected>Days</option>
-                    <option>Hours</option>
-                  </select>
-                </div>
-              </div>
-
-              <!-- Button -->
-              <button (click)="onClickCreateBid()"
-                class="button ripple-effect move-on-hover full-width margin-top-30"><span>Place a Bid</span></button>
-
-            </div>
-            <div class="bidding-signup">Don't have an account? <a href="#sign-in-dialog"
-                class="register-tab sign-in popup-with-zoom-anim">Sign Up</a></div>
+        <div class="countdown green margin-bottom-35">6 days, 23 hours left</div>
+        
+        <!-- Freelancers Bidding -->
+        <div class="boxed-list margin-bottom-60">
+          <div class="boxed-list-headline">
+            <h3><i class="icon-material-outline-group"></i> Freelancers Bidding</h3>
           </div>
         </div>
 
